rechecking the issue of navbar overlapping

--- a/css/style.css
+++ b/css/style.css
@@ -1589,9 +1589,7 @@ body {
     .nav-container {
         padding: 1rem;
     }
-    .hero {
-        /* padding-top: 60px; */
-    }
+  
     
     .hero-container {
         padding: 2rem 1rem;
